Mudança de estilização na sessão inicial

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer utilities {
-  .h-mobile {
-    height: calc(var(--var, 1vh) * 100);
+@layer base {
+  header {
+    @apply !px-0 !max-w-full;
   }
+}
+
+@layer utilities {
 }
