Created: Componente footer criado

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,14 @@
     @apply !px-0 !max-w-full;
   }
 }
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+html,
+body {
+  height: 100%;
+}
 @layer utilities {
 }
